RESOLVED FIXED 248896
[Cocoa] Extend networkConnectionIntegrity with support for FailClosed and HTTPSOnlyExplicitlyBypassedForDomain
https://bugs.webkit.org/show_bug.cgi?id=248896
Summary [Cocoa] Extend networkConnectionIntegrity with support for FailClosed and HTT...
Matthew Finkel
Reported 2022-12-07 11:40:31 PST
Add another option in the NetworkConnectionIntegrity OptionSet for FailClosed.
Attachments
Matthew Finkel
Comment 1 2022-12-07 11:48:08 PST
Matthew Finkel
Comment 2 2022-12-09 12:17:41 PST
Let's include HTTPSOnlyExplicitlyBypassedForDomain, too.
Matthew Finkel
Comment 3 2022-12-09 12:22:22 PST
EWS
Comment 4 2022-12-09 18:25:25 PST
Committed 257660@main (8aa946fe15de): <https://commits.webkit.org/257660@main> Reviewed commits have been landed. Closing PR #7401 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.