[Cocoa] Extend networkConnectionIntegrity with support for FailClosed and HTTPSOnlyExplicitlyBypassedForDomain https://bugs.webkit.org/show_bug.cgi?id=248896 rdar://103083653

Reviewed by Wenson Hsieh.

Add two more options in the NetworkConnectionIntegrity OptionSet for FailClosed
and HTTPSOnlyExplicitlyBypassedForDomain.

* Source/WebCore/platform/network/NetworkConnectionIntegrity.h:
* Source/WebKit/UIProcess/API/Cocoa/WKWebpagePreferences.mm:
(-[WKWebpagePreferences _networkConnectionIntegrityPolicy]):
(-[WKWebpagePreferences _setNetworkConnectionIntegrityPolicy:]):
* Source/WebKit/UIProcess/API/Cocoa/WKWebpagePreferencesPrivate.h:

Canonical link: https://commits.webkit.org/257660@main