Source/WebCore/platform/network/NetworkConnectionIntegrity.h
@@ -31,6 +31,8 @@ enum class NetworkConnectionIntegrity : uint8_t {
     Enabled = 1 << 0,
     HTTPSFirst = 1 << 1,
     HTTPSOnly = 1 << 2,
+    HTTPSOnlyExplicitlyBypassedForDomain = 1 << 3,
+    FailClosed = 1 << 4,
 };
 
 }
@@ -42,7 +44,9 @@ template<> struct EnumTraits<WebCore::NetworkConnectionIntegrity> {
         WebCore::NetworkConnectionIntegrity,
         WebCore::NetworkConnectionIntegrity::Enabled,
         WebCore::NetworkConnectionIntegrity::HTTPSFirst,
-        WebCore::NetworkConnectionIntegrity::HTTPSOnly
+        WebCore::NetworkConnectionIntegrity::HTTPSOnly,
+        WebCore::NetworkConnectionIntegrity::HTTPSOnlyExplicitlyBypassedForDomain,
+        WebCore::NetworkConnectionIntegrity::FailClosed
     >;
 };
 
